k8s/apps/gearhawk-website/gearhawk-hono/hono-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hono-svc
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: hono
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8787
