k8s/apps/gearhawk-website/gearhawk-hono/internal-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hono-internal
  namespace: gearhawk-website
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - api.gearhawk.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hono-svc
          port: 80
